fix(global): 💄 align footer logo and titles

--- a/css/global/footer.css
+++ b/css/global/footer.css
@@ -14,6 +14,7 @@
 }
 
 .footer-contato {
+  padding-top: calc(5.2/18*1rem);
   display: grid;
   gap: calc(32 / 18 * 1rem);
   max-width: calc(300 / 18 * 1rem);
@@ -26,6 +27,7 @@
 }
 
 .footer-informacoes {
+  padding-top: calc(5.2/18*1rem);
   display: grid;
   grid-template-rows: auto 1fr;
   gap: calc(32 / 18 * 1rem);
